# crossfire-web-client

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  ChangeLog  ChangeLog.md  INSTRUCTIONS.md  README.md  README.rst  TODO  TODO.md  config.h.in  index.html  package-lock.json  package.json  resources.xml  tsconfig.app.json  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
common/: CMakeLists.txt  client.c  client.h  commands.c  def-keys  image.c  init.c  item-types  item.c  item.h  mapdata.c  mapdata.h  newsocket.c  p_cmd.c  player.c  proto.h  script.c  script.h
development-ws-proxy/: README.md  package-lock.json  ws-proxy.js
docs/: implementation_plan.md  media-tags.md  protocol.txt
gtk-v2/: README
gtk-v2/src/: CMakeLists.txt  account.c  cfsndserv.c  config.c  gtk2proto.h  image.c  image.h  info.c  inventory.c  keys.c  main.c  main.h  map.c  menubar.c  metaserver.c  sdl.c  sound.h  spells.c
gtk-v2/themes/: Black  Standard
gtk-v2/ui/: caelestis.ui  dialogs.ui  eureka.ui  gtk-v1.ui  gtk-v2.ui
gtk-v2/win32/: Building.mingw.txt  autobuild.ps1  client.nsi  nsis.txt  win32-package.sh
old/: CMakeLists.txt  ChangeLog.md
old/common/: def-keys  init.c  mapdata.c  proto.h
old/plugins/: cfmaplog.py
plugins/: cfmaplog.py  cfmaplog.txt
src/: App.svelte  app.css  main.ts
src/components/: ContextMenu.svelte  GameMap.svelte  Hotbar.svelte  HotbarSlotPicker.svelte  InfoPanel.svelte  Inventory.svelte  KnowledgeList.svelte  Login.svelte  MagicMap.svelte  MenuBar.svelte  MenuBarDialogs.svelte  (+6 more)
utils/: pprof-latency.py
(+61 files in other folders)
